# velocimetro

./: CMakeLists.txt  Imagens.qrc  Privacy_Policy.txt  main.cpp  main.qml
android/: AndroidManifest.xml  build.gradle
